# optimal-execution-electricity-markets

./: .gitignore  Dockerfile  README.md  checkpoint_bsde.pth  checkpoint_hjb.pth  data_processing.ipynb  deep_bsde.ipynb  deep_bsde_new.ipynb  deep_bsde_test.ipynb  evaluate.py  evaluate.sh  evaluate_all.sh  job.sh  model.pth  pinn_model.pt  price_impact_inference.ipynb  pyproject.toml  requirements.txt.txt  run.py  run_test.py  setup.sh  slurm_job.sh  testing.ipynb  train.py  train2.py  train_dist.sh
.devcontainer/: devcontainer.json
agents/: analyticalagent.py  deepagent.py  hybridagent.py  immediateagent.py  ktimesagent.py  startendagent.py  timeweightedagent.py
config/: aid_config.json  eval_config.json  hjb_config.json  lstm_subnets_config.json  model_config.json  nonshared_lstm_config.json  run_config.json  separate_subnets_config.json  simple_hjb_config.json  train_config.json  train_config2.json
core/: base_bsde.py  fbsnn.py  nnets.py  solver.py
docs/: LSTM_SUBNETS_ARCHITECTURE.md
dynamics/: __init__.py  aid_dynamics.py  dynamics.py  full_dynamics.py  hjb_dynamics.py  simple_dynamics.py
models/: aid_bdse.py  aid_dbse.py  hjb_bsde.py  hjb_model.pth  model.pth  simple_hjb_bsde.py
models_saved/: almgrem_FC_ReLU_best.pth  almgrem_LSTM_ReLU.pth  almgrem_LSTM_ReLU_best.pth  almgrem_ResLSTM_ReLU.pth  almgrem_ResLSTM_ReLU_best.pth  almgrem_Resnet_ReLU_best.pth
notebooks/: deep_bsde_new.ipynb
old/: deep_bsde_test.ipynb  reinforcement_learning_optimizer.ipynb
saved/: almgrem_FC_ReLU.pth  almgrem_LSTM_ReLU.pth  almgrem_ResLSTM_ReLU.pth  (+2 more)
solvers/: fbsnn.py  (+3 more)
(+206 files in other folders)
