[tool.poetry]
name = "optimal-execution-electricity-markets"
version = "0.1.0"
description = ""
authors = ["Alexander Laloi Dybdahl <alexldybdahl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.0"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
sympy = "1.14.0"
scipy = "^1.16.0"
pandas = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
